Bug 310658 - kwin Crash when setting "No border."
Summary: kwin Crash when setting "No border."
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: aurorae (other bugs)
Version First Reported In: 4.9.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 308299 311102 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-11-25 16:56 UTC by commerce
Modified: 2012-12-29 09:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description commerce 2012-11-25 16:56:51 UTC
Application: kwin (4.9.2)
KDE Platform Version: 4.9.2
Qt Version: 4.8.3
Operating System: Linux 3.5.0-18-generic i686
Distribution: Ubuntu 12.10

-- Information about the crash:
- What I was doing when the application crashed: Right click title bar, select "More actions," select "No border." Happens with all applications tried. (Thunderbird, VLC, kterminal, Muon Software Manager, emelfm2)

- Custom settings of the application: Oxygen decorator. No others tried. Compositing enabled.

The crash can be reproduced every time.

-- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb1d91980 (LWP 1933))]

Thread 3 (Thread 0xaedffb40 (LWP 1941)):
#0  0xb77de424 in __kernel_vsyscall ()
#1  0xb2d3b96b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb75c564c in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb671d1cd in ?? () from /usr/lib/i386-linux-gnu/libQtScript.so.4
#4  0xb671d1ff in ?? () from /usr/lib/i386-linux-gnu/libQtScript.so.4
#5  0xb2d37d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb75b7d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0xaf7feb40 (LWP 2654)):
#0  0xb77de424 in __kernel_vsyscall ()
#1  0xb75b0d61 in select () from /lib/i386-linux-gnu/libc.so.6
#2  0xb6094758 in qt_safe_select (nfds=13, fdread=0xaee0058c, fdwrite=0xaee007a0, fdexcept=0xaee009b4, orig_timeout=0x0) at kernel/qcore_unix.cpp:83
#3  0xb609890b in QEventDispatcherUNIX::select (this=0xaee00488, nfds=13, readfds=0xaee0058c, writefds=0xaee007a0, exceptfds=0xaee009b4, timeout=0x0) at kernel/qeventdispatcher_unix.cpp:639
#4  0xb609984d in QEventDispatcherUNIXPrivate::doSelect (this=this@entry=0xaee00498, flags=..., timeout=0x0) at kernel/qeventdispatcher_unix.cpp:223
#5  0xb609a3d3 in QEventDispatcherUNIX::processEvents (this=0xaee00488, flags=...) at kernel/qeventdispatcher_unix.cpp:926
#6  0xb606426c in QEventLoop::processEvents (this=this@entry=0xaf7fe228, flags=...) at kernel/qeventloop.cpp:149
#7  0xb6064561 in QEventLoop::exec (this=0xaf7fe228, flags=...) at kernel/qeventloop.cpp:204
#8  0xb5f4f66c in QThread::exec (this=0xa12ce10) at thread/qthread.cpp:501
#9  0xb60427bd in QInotifyFileSystemWatcherEngine::run (this=0xa12ce10) at io/qfilesystemwatcher_inotify.cpp:248
#10 0xb5f52a58 in QThreadPrivate::start (arg=0xa12ce10) at thread/qthread_unix.cpp:338
#11 0xb2d37d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb75b7d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb1d91980 (LWP 1933)):
[KCrash Handler]
#7  QGraphicsScenePrivate::storeMouseButtonsForMouseGrabber (this=this@entry=0xb74b628, event=event@entry=0xbff81210) at graphicsview/qgraphicsscene.cpp:1118
#8  0xb5beaf31 in QGraphicsScenePrivate::mousePressEventHandler (this=this@entry=0xb74b628, mouseEvent=mouseEvent@entry=0xbff81210) at graphicsview/qgraphicsscene.cpp:1432
#9  0xb5beb0d3 in QGraphicsScene::mousePressEvent (this=0xb010fe0, mouseEvent=0xbff81210) at graphicsview/qgraphicsscene.cpp:4074
#10 0xb5bf8eec in QGraphicsScene::event (this=0xb010fe0, event=0xbff81210) at graphicsview/qgraphicsscene.cpp:3455
#11 0xb555639c in QApplicationPrivate::notify_helper (this=0xa032d38, receiver=0xb010fe0, e=0xbff81210) at kernel/qapplication.cpp:4562
#12 0xb555adaf in QApplication::notify (this=0xbff81210, receiver=0xb010fe0, e=0xbff81210) at kernel/qapplication.cpp:3944
#13 0xb7274e91 in KApplication::notify (this=0xbff820b8, receiver=0xb010fe0, event=0xbff81210) at ../../kdeui/kernel/kapplication.cpp:311
#14 0xb76e281f in notify (e=0xbff81210, o=0xb010fe0, this=0xbff820b8) at ../../kwin/main.cpp:371
#15 KWin::Application::notify (this=0xbff820b8, o=0xb010fe0, e=0xbff81210) at ../../kwin/main.cpp:367
#16 0xb606578e in QCoreApplication::notifyInternal (this=0xbff820b8, receiver=0xb010fe0, event=0xbff81210) at kernel/qcoreapplication.cpp:915
#17 0xb555424d in sendSpontaneousEvent (event=0xbff81210, receiver=0xb010fe0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#18 qt_sendSpontaneousEvent (receiver=0xb010fe0, event=0xbff81210) at kernel/qapplication.cpp:5560
#19 0xb5c0c04a in QGraphicsView::mousePressEvent (this=0xa16b948, event=0xbff81984) at graphicsview/qgraphicsview.cpp:3164
#20 0xb55af989 in QWidget::event (this=0xa16b948, event=0xbff81984) at kernel/qwidget.cpp:8367
#21 0xb59bff15 in QFrame::event (this=0xa16b948, e=0xbff81984) at widgets/qframe.cpp:557
#22 0xb5a50733 in QAbstractScrollArea::viewportEvent (this=0xa16b948, e=0xbff81984) at widgets/qabstractscrollarea.cpp:1043
#23 0xb5c15e1c in QGraphicsView::viewportEvent (this=0xa16b948, event=0xbff81984) at graphicsview/qgraphicsview.cpp:2866
#24 0xb5a52ef6 in viewportEvent (event=0xbff81984, this=<optimized out>) at widgets/qabstractscrollarea_p.h:100
#25 QAbstractScrollAreaFilter::eventFilter (this=0xaac1b38, o=0xb2ac880, e=0xbff81984) at widgets/qabstractscrollarea_p.h:116
#26 0xb60658fe in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0xa032d38, receiver=0xb2ac880, event=0xbff81984) at kernel/qcoreapplication.cpp:1025
#27 0xb555636d in QApplicationPrivate::notify_helper (this=0xa032d38, receiver=0xb2ac880, e=0xbff81984) at kernel/qapplication.cpp:4558
#28 0xb555b892 in QApplication::notify (this=0xa032d38, receiver=0xb2ac880, e=0xbff81984) at kernel/qapplication.cpp:4105
#29 0xb7274e91 in KApplication::notify (this=0xbff820b8, receiver=0xb2ac880, event=0xbff81984) at ../../kdeui/kernel/kapplication.cpp:311
#30 0xb76e281f in notify (e=0xbff81984, o=0xb2ac880, this=0xbff820b8) at ../../kwin/main.cpp:371
#31 KWin::Application::notify (this=0xbff820b8, o=0xb2ac880, e=0xbff81984) at ../../kwin/main.cpp:367
#32 0xb606578e in QCoreApplication::notifyInternal (this=0xbff820b8, receiver=0xb2ac880, event=0xbff81984) at kernel/qcoreapplication.cpp:915
#33 0xb5557206 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#34 QApplicationPrivate::sendMouseEvent (receiver=0xb2ac880, event=0xbff81984, alienWidget=0x0, nativeWidget=0xb2ac880, buttonDown=0xb5ee7d14 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3173
#35 0xb55e2a75 in QETWidget::translateMouseEvent (this=0xb2ac880, event=0xbff81dac) at kernel/qapplication_x11.cpp:4622
#36 0xb55e1705 in QApplication::x11ProcessEvent (this=0xbff820b8, event=0xbff81dac) at kernel/qapplication_x11.cpp:3737
#37 0xb560d97d in QEventDispatcherX11::processEvents (this=0x9fedea0, flags=...) at kernel/qeventdispatcher_x11.cpp:132
#38 0xb606426c in QEventLoop::processEvents (this=this@entry=0xbff81f38, flags=...) at kernel/qeventloop.cpp:149
#39 0xb6064561 in QEventLoop::exec (this=0xbff81f38, flags=...) at kernel/qeventloop.cpp:204
#40 0xb6069cba in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#41 0xb5553fc4 in QApplication::exec () at kernel/qapplication.cpp:3823
#42 0xb76e5189 in kdemain (argc=1, argv=0xbff821a4) at ../../kwin/main.cpp:545
#43 0x0804855b in main (argc=1, argv=0xbff821a4) at kwin_dummy.cpp:3

Reported using DrKonqi
Comment 1 Thomas Lübking 2012-11-25 17:05:14 UTC
you're not using the oxygen decoration but some aurorae theme (we should forbid oxygen in those theme names =)

@Martin:
useractions.cpp does not look like we've a general queued  connection

connect(m_menu, SIGNAL(triggered(QAction*)), this, SLOT(slotWindowOperation(QAction*)));

just "forgotton" or was there sth. else?
Comment 2 Thomas Lübking 2012-11-25 17:31:44 UTC
"Yes, because it does not work. The menu is then gone as well. We have to invoke performWindowOperation (making it Q_INVOKABLE for that purpose."
Comment 3 Thomas Lübking 2012-11-25 17:33:29 UTC
And to finally embarass myself: yes works. Sth. was wrong with the window i used for testing.
Blast.
Comment 4 Thomas Lübking 2012-11-29 19:37:00 UTC
Git commit c0b762dcd51de033294784e116f9d8e02bfa5401 by Thomas Lübking.
Committed on 25/11/2012 at 18:50.
Pushed by luebking into branch 'master'.

queue all menu caused window ops
REVIEW: 107462
FIXED-IN: 4.10

M  +1    -1    kwin/useractions.cpp

http://commits.kde.org/kde-workspace/c0b762dcd51de033294784e116f9d8e02bfa5401
Comment 5 Thomas Lübking 2012-12-03 19:00:52 UTC
*** Bug 311102 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Lübking 2012-12-03 19:32:41 UTC
*** Bug 311102 has been marked as a duplicate of this bug. ***
Comment 7 Martin Flöser 2012-12-29 09:13:52 UTC
*** Bug 308299 has been marked as a duplicate of this bug. ***