queue all menu caused window ops

BUG: 310658
REVIEW: 107462
FIXED-IN: 4.10